# blctl

./: .gitignore  Cargo.toml  Cargo.toml~  LICENSE-MIT  README.md  default.nix  flake.nix  install.sh  result  shell.nix
nix/: default.nix  module.nix  package.nix  shell.nix
service-configs/: README.md
service-configs/runit/blctl/: run
service-configs/systemd/: blctl.service
src/: controller.rs  kernelinterface.rs  main.rs  main.rs~
src/client/: blctl.rs  ipc.rs  main.rs
src/client/backlight/: mod.rs
src/daemon/: blctl.rs  blctld.rs  main.rs
src/daemon/backlight/: mod.rs  sysfs.rs
src/shared/: Cargo.toml
src/shared/src/: lib.rs
