[package]
name = "blctl"
author = "xela"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
bincode = "1.3.3"

[[bin]]
name = "blctl"
path = "src/client/main.rs"

[[bin]]
name = "blctld"
path = "src/daemon/main.rs"