[package]
name = "blctl-shared"
author = "imxela <hi@xela.me>"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
bincode = "1.3.3"

[lib]
name = "blctl_shared"
path = "src/lib.rs"